# MEPhI-Labs-1Year-2Sem

./: README.md
lab1/: CMakeLists.txt  README.MD  main.c
lab1/lib/: 1lab.c  1lab.h  1lab_errors.c  1lab_errors.h
lab2/: Makefile  README.md  main.c
lab2/lib/: lab2_library_other.c  lab2_library_other.h  stack_library.h  stack_list.c  stack_list_library.c  stack_list_library.h  stack_vector.c  stack_vector_library.c  stack_vector_library.h  task1_lab2.c  task1_lab2.h
lab3/: README.md
lab3/lab3a/: CMakeLists.txt  (+15 more)
lab3/lab3b/: CMakeLists.txt  dialog.c  dialog.h  fTableLib.c  fTableLib.h  funcDialog.c  funcDialog.h  general.h  keySpace1.c  keySpace1.h  keySpace2.c  keySpace2.h  keySpacesLib.c  keySpacesLib.h  lib.c  lib.h  main.c  tableUtilities.c  tableUtilities.h
lab4/lab4a/: CMakeLists.txt  README.md  main.c
lab4/lab4a/Controller/: dialog.c  dialog.h
lab4/lab4a/Model/: BinTreeLib.c  BinTreeLib.h  fileTree.c  fileTree.h  freqWords.c  freqWords.h  general.h  utilLib.c  utilLib.h
lab4/lab4a/View/: dialogTree.c  dialogTree.h  errorsLib.c  errorsLib.h  graphView.c  graphView.h  options.c  options.h
lab4/lab4b/: CMakeLists.txt  README.md  main.c
lab4/lab4b/Controller/: controller.c  controller.h
lab4/lab4b/Model/: TreeLib.c  TreeLib.h  fastFinding.c  fastFinding.h  file.c  file.h  general.h  graphvizLib.c  graphvizLib.h  utilLib.c  utilLib.h
lab4/lab4b/View/: dialog.c  dialog.h  errs.c  options.c
lab5/: CMakeLists.txt  README.md  main.c
lab5/Controller/: controller.c  controller.h
lab5/Model/: GraphLib.c  GraphLib.h  canada.c  canada.h  file.c  file.h  general.h  graphvizLib.c  graphvizLib.h  utilLib.c  utilLib.h  vector.c  vector.h
lab5/View/: dialog.c  dialog.h  errs.c
lab5/examples/: canada.csv
(+14 files in other folders)
